arm64: dts: salvator-x: Add console setting in bootargs
Add debug serial-0 settting:
  - baud rate set to 115200

Signed-off-by: Gaku Inami <gaku.inami.xw@bp.renesas.com>
Signed-off-by: Takeshi Kihara <takeshi.kihara.df@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -21,7 +21,7 @@
 	};
 
 	chosen {
-		bootargs = "ignore_loglevel";
+		bootargs = "console=ttySC0,115200 ignore_loglevel";
 		stdout-path = &scif2;
 	};
 
