--- a/drivers/gpu/drm/rcar-du/Kconfig
+++ b/drivers/gpu/drm/rcar-du/Kconfig
@@ -21,10 +21,11 @@ config DRM_RCAR_HDMI
 config DRM_RCAR_LVDS
 	bool "R-Car DU LVDS Encoder Support"
 	depends on DRM_RCAR_DU
-	depends on ARCH_R8A7790 || ARCH_R8A7791 || COMPILE_TEST
+	depends on ARCH_R8A7790 || ARCH_R8A7791 || ARCH_R8A7793 || \
+			ARCH_R8A7795 || COMPILE_TEST
 	help
 	  Enable support for the R-Car Display Unit embedded LVDS encoders
-	  (currently only on R8A7790 and R8A7791).
+	  (currently only on R8A7790, R8A7791, R8A7793 and R8A7795).
 
 config DRM_RCAR_VSP
 	bool "R-Car DU VSP Compositor Support"
