ravb: Add RAVB config for R-Car Gen3
Signed-off-by: Yoshifumi Hosoya <yoshifumi.hosoya.wj@renesas.com>
Signed-off-by: Masaru Nagai <masaru.nagai.vx@renesas.com>
Signed-off-by: Kazuya Mizuguchi <kazuya.mizuguchi.ks@renesas.com>

--- a/drivers/net/ethernet/renesas/Kconfig
+++ b/drivers/net/ethernet/renesas/Kconfig
@@ -4,6 +4,8 @@
 
 config NET_VENDOR_RENESAS
 	bool "Renesas devices"
+	depends on ARCH_RCAR_GEN3 || ARCH_SHMOBILE
+	select RAVB
 	default y
 	---help---
 	  If you have a network (Ethernet) card belonging to this class, say Y.
