--- a/drivers/net/ethernet/renesas/Kconfig
+++ b/drivers/net/ethernet/renesas/Kconfig
@@ -6,6 +6,7 @@ config NET_VENDOR_RENESAS
 	bool "Renesas devices"
 	depends on ARCH_RCAR_GEN3 || ARCH_SHMOBILE
 	select RAVB
+	select MICREL_PHY
 	default y
 	---help---
 	  If you have a network (Ethernet) card belonging to this class, say Y.
