--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -424,10 +424,14 @@
 					compatible = "renesas,r8a7795-mstp-clocks",
 						     "renesas,cpg-mstp-clocks";
 					reg = <0 0xe615014c 0 4>, <0 0xe61501c4 0 4>;
-					clocks =  <&s3d4_clk>;
+					clocks =  <&s3d4_clk>, <&s3d4_clk>, <&s3d4_clk>,
+						  <&s3d4_clk>;
 					#clock-cells = <1>;
-					renesas,clock-indices = <R8A7795_CLK_HSUSB>;
-					clock-output-names = "hsusb";
+					renesas,clock-indices = <R8A7795_CLK_HSUSB
+								 R8A7795_CLK_EHCI0
+								 R8A7795_CLK_EHCI1
+								 R8A7795_CLK_EHCI2>;
+					clock-output-names = "hsusb", "ehci0", "ehci1", "ehci2";
 				};
 
 				mstp8_clks: mstp8_clks@e6150990 {
