--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -32,6 +32,10 @@
 	};
 };
 
+&extal_clk {
+	clock-frequency = <16666666>;
+};
+
 &pfc {
 	scif1_pins: scif1 {
 		renesas,groups = "scif1_data_a", "scif1_ctrl";
