--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -506,7 +506,8 @@
 						 <&s3d4_clk>,
 						 <&s2d1_clk>, <&s2d1_clk>, <&s2d1_clk>,
 						 <&s2d1_clk>, <&s2d1_clk>, <&hdmi_clk>,
-						 <&hdmi_clk>;
+						 <&hdmi_clk>, <&s2d1_clk>, <&s2d1_clk>,
+						 <&s2d1_clk>, <&s2d1_clk>;
 					#clock-cells = <1>;
 					renesas,clock-indices = <
 						R8A7795_CLK_HSUSB R8A7795_CLK_EHCI0
@@ -514,12 +515,15 @@
 						R8A7795_CLK_DU3 R8A7795_CLK_DU2
 						R8A7795_CLK_DU1 R8A7795_CLK_DU0
 						R8A7795_CLK_LVDS R8A7795_CLK_HDMI1
-						R8A7795_CLK_HDMI0
+						R8A7795_CLK_HDMI0 R8A7795_CLK_CSI40
+						R8A7795_CLK_CSI41 R8A7795_CLK_CSI20
+						R8A7795_CLK_CSI21
 					>;
 					clock-output-names =
 						"hsusb", "ehci0", "ehci1", "ehci2",
 						"du3", "du2", "du1", "du0", "lvds",
-						"isfr1","isfr0";
+						"isfr1","isfr0","csi40", "csi41",
+						"csi20", "csi21";
 				};
 
 				mstp8_clks: mstp8_clks@e6150990 {
