arm64: dts: r8a7795: Add rcar-vin support
Add vin0 and vin1 device nodes to Device Tree for r8a7795 with the
aliases.

Signed-off-by: Yoshihiko Mori <yoshihiko.mori.nx@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -28,6 +28,8 @@
 		spi2 = &msiof1;
 		spi3 = &msiof2;
 		spi4 = &msiof3;
+		vin0 = &vin0;
+		vin1 = &vin1;
 	};
 
 	psci {
@@ -864,6 +866,22 @@
 			clocks = <&mstp2_clks R8A7795_CLK_MSIOF3>;
 			#address-cells = <1>;
 			#size-cells = <0>;
+			status = "disabled";
+		};
+
+		vin0: video@e6ef0000 {
+			compatible = "renesas,vin-r8a7795";
+			clocks = <&mstp8_clks R8A7795_CLK_VIN0>;
+			reg = <0 0xe6ef0000 0 0x1000>;
+			interrupts = <0 188 IRQ_TYPE_LEVEL_HIGH>;
+			status = "disabled";
+		};
+
+		vin1: video@e6ef1000 {
+			compatible = "renesas,vin-r8a7795";
+			clocks = <&mstp8_clks R8A7795_CLK_VIN1>;
+			reg = <0 0xe6ef1000 0 0x1000>;
+			interrupts = <0 189 IRQ_TYPE_LEVEL_HIGH>;
 			status = "disabled";
 		};
 
