--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -547,6 +547,14 @@
 	status = "okay";
 };
 
+&csi2_0 {
+	status = "okay";
+};
+
+&csi2_1 {
+	status = "okay";
+};
+
 &du {
 	pinctrl-0 = <&du_pins>;
 	pinctrl-names = "default";
