--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -432,6 +432,14 @@
 				clock-mult = <1>;
 			};
 
+			zg_clk: zg {
+				compatible = "fixed-factor-clock";
+				clocks = <&cpg_clocks R8A7795_CLK_PLL4>;
+				#clock-cells = <0>;
+				clock-div = <2>;
+				clock-mult = <1>;
+			};
+
 			cpg_clocks: cpg_clocks@e6150000 {
 				#address-cells = <2>;
 				#size-cells = <2>;
@@ -445,6 +453,18 @@
 				clock-output-names = "main", "pll0", "pll1","pll2",
 						     "pll3", "pll4";
 				#power-domain-cells = <0>;
+
+				mstp1_clks: mstp1_clks@e6150134 {
+					compatible = "renesas,r8a7795-mstp-clocks",
+						     "renesas,cpg-mstp-clocks";
+					reg = <0 0xe6150134 0 4>, <0 0xe6150038 0 4>;
+					clocks = <&zg_clk>;
+					#clock-cells = <1>;
+					renesas,clock-indices = <
+						R8A7795_CLK_3DGE
+					>;
+					clock-output-names = "3dge";
+				};
 
 				mstp2_clks: mstp2_clks@e6150138 {
 					compatible =
@@ -929,6 +949,13 @@
 			interrupts = <GIC_SPI 105 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&mstp8_clks R8A7795_CLK_SATA>;
 			status = "disabled";
+		};
+
+		gsx: gsx@fd000000 {
+			compatible = "renesas,gsx";
+			reg = <0 0xfd000000 0 0x3ffff>;
+			interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&mstp1_clks R8A7795_CLK_3DGE>;
 		};
 
 		vsp2d0: vsp2@fea20000 {
