arm64: dts: r8a7795: Fix cpg clocks node
In accordance with the specification of commit 3dd246a2fdce ("clk:
shmobile: add Renesas R-Car Gen3 CPG support"), deletes clock-indices
field, and adds clock-output-name.

Signed-off-by: Takeshi Kihara <takeshi.kihara.df@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -352,11 +352,8 @@
 					     "renesas,rcar-gen3-cpg-clocks";
 				reg = <0 0xe6150000 0 0x1000>;
 				clocks = <&extal_clk>;
-				clock-indices = <
-					R8A7795_CLK_MAIN R8A7795_CLK_PLL0
-					R8A7795_CLK_PLL1 R8A7795_CLK_PLL2
-					R8A7795_CLK_PLL3 R8A7795_CLK_PLL4
-				>;
+				clock-output-names = "main", "pll0", "pll1","pll2",
+						     "pll3", "pll4";
 				#power-domain-cells = <0>;
 
 				mstp2_clks: mstp2_clks@e6150138 {
