--- a/drivers/gpu/drm/rcar-du/Kconfig
+++ b/drivers/gpu/drm/rcar-du/Kconfig
@@ -15,6 +15,7 @@ config DRM_RCAR_HDMI
 	bool "R-Car DU HDMI Encoder Support"
 	depends on DRM_RCAR_DU
 	depends on OF
+	select DRM_DW_HDMI if ARCH_R8A7795
 	help
 	  Enable support for external HDMI encoders.
 
