--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -2771,5 +2771,10 @@
 			clocks = <&cpg CPG_MOD 116>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
 		};
+
+		prr: chipid@fff00044 {
+			compatible = "renesas,prr";
+			reg = <0 0xfff00044 0 4>;
+		};
 	};
 };
