arm64: dts: renesas: Add PFC driver to R8A779A0
Add PFC devicetree description to V3U

Signed-off-by: LUU HOAI <hoai.luu.ub@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -123,5 +123,19 @@
 				      IRQ_TYPE_LEVEL_HIGH)>;
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 		};
+
+		pfc: pin-controller@e6050000 {
+			compatible = "renesas,pfc-r8a779a0";
+			reg = <0 0xe6058000 0 0x16c>,
+				<0 0xe6050000 0 0x16c>,
+				<0 0xe6050800 0 0x16c>,
+				<0 0xe6058800 0 0x16c>,
+				<0 0xe6060000 0 0x16c>,
+				<0 0xe6060800 0 0x16c>,
+				<0 0xe6068000 0 0x16c>,
+				<0 0xe6068800 0 0x16c>,
+				<0 0xe6069000 0 0x16c>,
+				<0 0xe6069800 0 0x16c>;
+		};
 	};
 };
